--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,18 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+#Added
+config.py
+
+# Logs or volume data
+volume_count.json
+*.log
+
+# VSCode or PyCharm settings
+.vscode/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
